@@ -3640,6 +3640,11 @@
 
    <!-- Default language-related segmentation rules -->
    <languagerule languagerulename="Default">
+    <rule break="yes">
+     <!--numbered headers break rule -->
+     <beforebreak>^\s*[\p{Nd}\.]+\s*</beforebreak>
+     <afterbreak>.</afterbreak>
+    </rule>
     <rule break="no">
      <!-- ... exception -->
      <beforebreak>\.\.\.</beforebreak>
